// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoverBox renders 1`] = `
<div
  className="m-layover-box m-layover-box--top"
>
  <div
    className="m-layover-box__vehicle"
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 27.72,
          "width": 40,
        }
      }
      viewBox="-20 -8.36 40 27.72"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={11}
          rx={5.5}
          ry={5.5}
          width={40}
          x={-20}
          y={7.359999999999999}
        />
        <text
          className="m-vehicle-icon__label m-vehicle-icon__label--extended"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={12.86}
        >
          sooner
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(0.38) rotate(270) translate(-24,-22)"
        />
      </g>
    </svg>
  </div>
  <div
    className="m-layover-box__vehicle"
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 27.72,
          "width": 40,
        }
      }
      viewBox="-20 -8.36 40 27.72"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={11}
          rx={5.5}
          ry={5.5}
          width={40}
          x={-20}
          y={7.359999999999999}
        />
        <text
          className="m-vehicle-icon__label m-vehicle-icon__label--extended"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={12.86}
        >
          later
        </text>
        <path
          className="m-vehicle-icon__triangle"
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
          transform="scale(0.38) rotate(270) translate(-24,-22)"
        />
      </g>
    </svg>
  </div>
</div>
`;

exports[`LayoverBox renders ghost 1`] = `
<div
  className="m-layover-box m-layover-box--top"
>
  <div
    className="m-layover-box__vehicle"
    onClick={[Function]}
  >
    <svg
      style={
        Object {
          "height": 27.8,
          "width": 40,
        }
      }
      viewBox="-20 -9.2 40 27.8"
    >
      <g
        className="m-vehicle-icon m-vehicle-icon--small ghost m-vehicle-icon--highlighted"
      >
        <rect
          className="m-vehicle-icon__label-background"
          height={11}
          rx={5.5}
          ry={5.5}
          width={40}
          x={-20}
          y={6.6}
        />
        <text
          className="m-vehicle-icon__label m-vehicle-icon__label--extended"
          dominantBaseline="central"
          textAnchor="middle"
          x="0"
          y={12.1}
        >
          ghost_soonest
        </text>
        <g
          transform="scale(0.26599999999999996) translate(-24,-23)"
        >
          <path
            className="m-vehicle-icon__ghost-highlight"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
          <path
            className="m-vehicle-icon__ghost-body"
            d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
            stroke-join="round"
          />
          <ellipse
            className="m-vehicle-icon__ghost-eye"
            cx="19.73"
            cy="22.8"
            rx="3.11"
            ry="3.03"
          />
          <ellipse
            className="m-vehicle-icon__ghost-eye"
            cx="35.29"
            cy="22.8"
            rx="3.11"
            ry="3.03"
          />
        </g>
        <g
          transform="translate(5.7, -3.8) scale(0.2) translate(-24, -24)"
        >
          <g
            className="c-icon-alert-circle--highlighted"
          >
            <circle
              className="c-icon-alert-circle__outline"
              cx="24"
              cy="24"
              r="27"
            />
            <circle
              className="c-icon-alert-circle__fill"
              cx="24"
              cy="24"
              r="22.59"
            />
            <g
              className="c-icon-alert-circle__exclamation-point"
            >
              <path
                d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
              />
              <path
                d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
              />
            </g>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
